testing the grid system

--- a/index.html
+++ b/index.html
@@ -16,4 +16,20 @@
   <body>
     Hello world!
   </body>
+    <div class="row">
+      <div class="col">photo</div>
+      <div class="col">description</div>
+    </div>
+    <div class="row">
+      <div class="col">photo</div>
+      <div class="col">description</div>
+    </div>
+    <div class="row">
+      <div class="col">photo</div>
+      <div class="col">description</div>
+    </div>
+    <div class="row">
+      <div class="col">photo</div>
+      <div class="col">description</div>
+    </div>
 </html>
