--- a/index.html
+++ b/index.html
@@ -16,20 +16,23 @@
   <body>
     Hello world!
   </body>
-    <div class="row">
-      <div class="col">photo</div>
-      <div class="col">description</div>
+    <div class="container">
+      <div class="row">
+        <div class="col">photo</div>
+        <div class="col">description</div>
+      </div>
+      <div class="row">
+        <div class="col">photo</div>
+        <div class="col">description</div>
+      </div>
+      <div class="row">
+        <div class="col">photo</div>
+        <div class="col">description</div>
+      </div>
+      <div class="row">
+        <div class="col">photo</div>
+        <div class="col">description</div>
+      </div>
     </div>
-    <div class="row">
-      <div class="col">photo</div>
-      <div class="col">description</div>
-    </div>
-    <div class="row">
-      <div class="col">photo</div>
-      <div class="col">description</div>
-    </div>
-    <div class="row">
-      <div class="col">photo</div>
-      <div class="col">description</div>
-    </div>
+    
 </html>
