testing use of the grid box

--- a/index.html
+++ b/index.html
@@ -17,9 +17,34 @@
     Hello world!
   </body>
     <div class="container">
+      <!-- Logo -->
+       <div class="row">
+        Logo here
+       </div>
+    </div>
+    <div class="container">
+      <!-- Tag lines -->
+       <div class="row">
+        Delicious, From-Scratch Recipies Close at Hand
+       </div>
+       <div class="row">
+        The Fresh Choice of UT!
+       </div>
+    </div>
+    <div class="container">
       <div class="row">
         <div class="col">photo</div>
-        <div class="col">description</div>
+        <div class="col">
+          <div class="row">
+            Name
+          </div>
+          <div class="row">
+            Description
+          </div>
+          <div class="row">
+            Price
+          </div>
+        </div>
       </div>
       <div class="row">
         <div class="col">photo</div>
