adding cols for description space on the other items

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <body>
     Hello world!
   </body>
+    <!-- Logo -->
     <div class="container">
-      <!-- Logo -->
        <div class="row">
         Logo here
        </div>
     </div>
+    <!-- Tag lines -->
     <div class="container">
-      <!-- Tag lines -->
        <div class="row">
         Delicious, From-Scratch Recipies Close at Hand
        </div>
@@ -31,6 +31,7 @@
         The Fresh Choice of UT!
        </div>
     </div>
+    <!-- Menu Items -->
     <div class="container">
       <div class="row">
         <div class="col">photo</div>
@@ -48,15 +49,45 @@
       </div>
       <div class="row">
         <div class="col">photo</div>
-        <div class="col">description</div>
+        <div class="col">
+          <div class="row">
+            Name
+          </div>
+          <div class="row">
+            Description
+          </div>
+          <div class="row">
+            Price
+          </div>
+        </div>
       </div>
       <div class="row">
         <div class="col">photo</div>
-        <div class="col">description</div>
+        <div class="col">
+          <div class="row">
+            Name
+          </div>
+          <div class="row">
+            Description
+          </div>
+          <div class="row">
+            Price
+          </div>
+        </div>
       </div>
       <div class="row">
         <div class="col">photo</div>
-        <div class="col">description</div>
+        <div class="col">
+          <div class="row">
+            Name
+          </div>
+          <div class="row">
+            Description
+          </div>
+          <div class="row">
+            Price
+          </div>
+        </div>
       </div>
     </div>
     
