trying to add O's logo

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
   </head>
   <!-- Implement below this point -->
-   
+
   <!-- Logo -->
   <div class="container">
       <div class="row">
-      Logo here
+        <img src="Logo.png" alt="O's Campus Cafe Logo"/>
       </div>
   </div>
   <!-- Tag lines -->
