trying to center the tag lines

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   </div>
   <!-- Tag lines -->
   <div class="container">
-      <div class="row">
-      Delicious, From-Scratch Recipies Close at Hand
+      <div class="row justify-content-md-center">
+        Delicious, From-Scratch Recipies Close at Hand
       </div>
-      <div class="row">
-      The Fresh Choice of UT!
+      <div class="row justify-content-md-center">
+        The Fresh Choice of UT!
       </div>
   </div>
   <!-- Menu Items -->
