fixed style a little bit

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <img src="Logo.png" alt="O's Campus Cafe Logo"/>
       </div>
   </div>
+
   <!-- Tag lines -->
   <div class="container">
       <div class="row justify-content-md-center">
@@ -29,62 +30,39 @@
         The Fresh Choice of UT!
       </div>
   </div>
+
   <!-- Menu Items -->
   <div class="container">
     <div class="row">
       <div class="col">photo</div>
       <div class="col">
-        <div class="row">
-          Name
-        </div>
-        <div class="row">
-          Description
-        </div>
-        <div class="row">
-          Price
-        </div>
+        <div class="row">Name</div>
+        <div class="row">Description</div>
+        <div class="row">Price</div>
       </div>
     </div>
     <div class="row">
       <div class="col">photo</div>
       <div class="col">
-        <div class="row">
-          Name
-        </div>
-        <div class="row">
-          Description
-        </div>
-        <div class="row">
-          Price
-        </div>
+        <div class="row">Name</div>
+        <div class="row">Description</div>
+        <div class="row">Price</div>
       </div>
     </div>
     <div class="row">
       <div class="col">photo</div>
       <div class="col">
-        <div class="row">
-          Name
-        </div>
-        <div class="row">
-          Description
-        </div>
-        <div class="row">
-          Price
-        </div>
+        <div class="row">Name</div>
+        <div class="row">Description</div>
+        <div class="row">Price</div>
       </div>
     </div>
     <div class="row">
       <div class="col">photo</div>
       <div class="col">
-        <div class="row">
-          Name
-        </div>
-        <div class="row">
-          Description
-        </div>
-        <div class="row">
-          Price
-        </div>
+        <div class="row">Name</div>
+        <div class="row">Description</div>
+        <div class="row">Price</div>
       </div>
     </div>
   </div>
