--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Logo -->
   <div class="container">
       <div class="row">
-        <img src="Logo.png" alt="O's Campus Cafe Logo"/>
+        <img src="logo.png" alt="O's Campus Cafe Logo"/>
       </div>
   </div>
 
@@ -33,7 +33,7 @@
 
   <!-- Menu Items -->
   <div class="container">
-    <div class="row">
+    <div class="row menu-item">
       <div class="col">photo</div>
       <div class="col">
         <div class="row">Name</div>
@@ -41,7 +41,7 @@
         <div class="row">Price</div>
       </div>
     </div>
-    <div class="row">
+    <div class="row menu-item">
       <div class="col">photo</div>
       <div class="col">
         <div class="row">Name</div>
@@ -49,7 +49,7 @@
         <div class="row">Price</div>
       </div>
     </div>
-    <div class="row">
+    <div class="row menu-item">
       <div class="col">photo</div>
       <div class="col">
         <div class="row">Name</div>
@@ -57,7 +57,7 @@
         <div class="row">Price</div>
       </div>
     </div>
-    <div class="row">
+    <div class="row menu-item">
       <div class="col">photo</div>
       <div class="col">
         <div class="row">Name</div>
