adding menu item photos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- Menu Items -->
   <div class="container">
     <div class="row menu-item">
-      <div class="col">photo</div>
+      <div class="col"><img src="panini.jpg" alt="Caprese Panini"/></div>
       <div class="col">
         <div class="row">Name</div>
         <div class="row">Description</div>
