make menu items smaller

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   <!-- Menu Items -->
   <div class="container">
     <div class="row menu-item">
-      <div class="col"><img src="panini.jpg" alt="Caprese Panini"/></div>
+      <div class="col"><img src="panini.jpg" alt="Caprese Panini" class="menu-image"/></div>
       <div class="col">
-        <div class="row">Name</div>
+        <div class="row">Caprese Panini</div>
         <div class="row">Description</div>
         <div class="row">Price</div>
       </div>
