added more photos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="row menu-item">
-      <div class="col">photo</div>
+      <div class="col"><img src="coffee.jpg" alt="Iced Coffee" class="menu-image"/></div>
       <div class="col">
         <div class="row">Name</div>
         <div class="row">Description</div>
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div class="row menu-item">
-      <div class="col">photo</div>
+      <div class="col"><img src="fruit.jpg" alt="Fruit Cup" class="menu-image"/></div>
       <div class="col">
         <div class="row">Name</div>
         <div class="row">Description</div>
@@ -58,7 +58,7 @@
       </div>
     </div>
     <div class="row menu-item">
-      <div class="col">photo</div>
+      <div class="col"><img src="croissant.jpg" alt="Chocolate Croissant" class="menu-image"/></div>
       <div class="col">
         <div class="row">Name</div>
         <div class="row">Description</div>
