--- a/index.html
+++ b/index.html
@@ -12,59 +12,61 @@
     <link rel="stylesheet" href="style.css">
 
   </head>
-  <!-- Implement below this point -->
 
   <!-- Logo -->
-  <div class="container">
-      <div class="row">
-        <img src="logo.png" alt="O's Campus Cafe Logo"/>
-      </div>
+  <div class="logo-container">
+    <img src="Images/logo.jpg" alt="Coffee Central Logo" class="logo"/>
   </div>
 
   <!-- Tag lines -->
-  <div class="container">
-      <div class="row justify-content-md-center">
-        Delicious, From-Scratch Recipies Close at Hand
-      </div>
-      <div class="row justify-content-md-center">
-        The Fresh Choice of UT!
-      </div>
-  </div>
+  <div class="first-tag-line">Sweet Sips From Scratch</div>
+  <div class="second-tag-line">The Best Coffee at UT!</div>
 
   <!-- Menu Items -->
   <div class="container">
     <div class="row menu-item">
-      <div class="col"><img src="panini.jpg" alt="Caprese Panini" class="menu-image"/></div>
-      <div class="col">
-        <div class="row">Caprese Panini</div>
-        <div class="row">Description</div>
-        <div class="row">Price</div>
+      <div class="col-4"><img src="Images/latte.jpg" alt="Iced Vanilla Latte" class="item-image"/></div>
+      <div class="col-7 item-info">
+        <div class="row item-title">Iced Vanilla Latte</div>
+        <div class="row item-description">A cold espresso-based drink with milk and our house-made vanilla syrup.</div>
+        <div class="row">
+          <div class="col item-price">$5.50</div>
+          <div class="col button-container"><button type="button" class="button-style">Add</button></div>
+        </div> 
       </div>
     </div>
     <div class="row menu-item">
-      <div class="col"><img src="coffee.jpg" alt="Iced Coffee" class="menu-image"/></div>
-      <div class="col">
-        <div class="row">Name</div>
-        <div class="row">Description</div>
-        <div class="row">Price</div>
+      <div class="col-4"><img src="Images/mocha.jpg" alt="Iced Mocha" class="item-image"/></div>
+      <div class="col-7 item-info">
+        <div class="row item-title">Iced Mocha</div>
+        <div class="row item-description">A cold espresso-based drink with milk and our house-made chocolate syrup.</div>
+        <div class="row">
+          <div class="col item-price">$5.50</div>
+          <div class="col button-container"><button type="button" class="button-style">Add</button></div>
+        </div> 
       </div>
     </div>
     <div class="row menu-item">
-      <div class="col"><img src="fruit.jpg" alt="Fruit Cup" class="menu-image"/></div>
-      <div class="col">
-        <div class="row">Name</div>
-        <div class="row">Description</div>
-        <div class="row">Price</div>
+      <div class="col-4"><img src="Images/matcha.jpg" alt="Iced Matcha Latte" class="item-image"/></div>
+      <div class="col-7 item-info">
+        <div class="row item-title">Iced Matcha Latte</div>
+        <div class="row item-description">A cold milk-based drink with our house-made matcha and simple syrup.</div>
+        <div class="row">
+          <div class="col item-price">$4.50</div>
+          <div class="col button-container"><button type="button" class="button-style">Add</button></div>
+        </div> 
       </div>
     </div>
     <div class="row menu-item">
-      <div class="col"><img src="croissant.jpg" alt="Chocolate Croissant" class="menu-image"/></div>
-      <div class="col">
-        <div class="row">Name</div>
-        <div class="row">Description</div>
-        <div class="row">Price</div>
+      <div class="col-4"><img src="Images/croissant.jpg" alt="Chocolate Croissant" class="item-image"/></div>
+      <div class="col-7 item-info">
+        <div class="row item-title">Chocolate Croissant</div>
+        <div class="row item-description">A flaky, buttery pastry filled with rich dark chocolate.</div>
+        <div class="row">
+          <div class="col item-price">$4.70</div>
+          <div class="col button-container"><button type="button" class="button-style">Add</button></div>
+        </div> 
       </div>
     </div>
   </div>
-    
 </html>
